feat: rules for ingestion-api
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>